*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.2 ===

=== 1.0.1 ===
* Updated build scripts.

=== 1.0.0 ===
* Bugfixes for the tk::GraphDot widget.
* Added new Display::wait_events() method for polling display for incoming events.
* Updated rendering of tk::LedMeterChannel widget.
* Fixed NULL dereference when linking styles in the schema.
* Refactoring of widget rendering, allmost all usages of Color::scale_lightness
  replaced with Color::scale_lch_luminance.
* Added 'reduce' options to prop::Allocation property.
* Added 'reduce' options handling by tk::Box and tk::Grid widgets.
* Fixed bug in prop::StringList which could yield to ignore of localization parameters.
* Added support of CIE XYZ D65, CIE LAB D65, CIE LCH D65 and CMYK color schemes for tk::Color property.
* Implemented tk::Schema::add methods for adding custom styles at the initialization stage.
* Fixed bug in clipboard paste for tk::TextDataSink class.
* Updated brightness control for LED channels grouped into LED meters.
* Added border radius support to the tk::Menu widget.
* Fixed prolbem with scrollbar sync for the tk::ListBox widget.

=== 0.5.1 ===
* Updated code to match lltl library headers.
* Better integration with system::follow_url() routine.
* Added automatic style creation from XML schema.
* Added simple language configuration support by the tk::Schema class.
* Fixed allocation for invisible widgets inside the tk::Grid container.
* Updated behaviour of TextDataSink to be more memory-effective.
* Property 'size_constraints' renamed to 'constraints' for tk::Align and tk::Group widgets.
* Added 'set_horizontal' and 'set_vertical' methods to the embedding property.
* Fixed crash on empty tk::Grid container, added constraints() property to the tk::Grid widget.
* Added parse() method to all enumeration properties.